force-app/main/default/objects/Sociedades__mdt/fields/Banco_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Banco_Beneficiario__c</fullName>
    <label>Banco Beneficiario</label>
    <length>80</length>
    <type>Text</type>
</CustomField>