force-app/main/default/objects/Sociedades__mdt/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <label>Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>