force-app/main/default/objects/Sociedades__mdt/fields/Calle_2__c.field-meta.xml
<CustomField>
    <fullName>Calle_2__c</fullName>
    <label>Calle 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>