force-app/main/default/objects/Sociedades__mdt/fields/Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico__c</fullName>
    <label>Correo Electronico</label>
    <length>80</length>
    <type>Text</type>
</CustomField>