force-app/main/default/objects/Sociedades__mdt/fields/Direccion_Banco__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Banco__c</fullName>
    <label>Direccion Banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>