force-app/main/default/objects/Sociedades__mdt/fields/Divisa_de_la_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Divisa_de_la_Cuenta__c</fullName>
    <label>Divisa de la Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>