force-app/main/default/objects/Sociedades__mdt/fields/Identificador_Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Identificador_Sociedad__c</fullName>
    <description>Identificador numerico de la sociedad</description>
    <label>Identificador de Sociedad</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>