force-app/main/default/objects/Sociedades__mdt/fields/Numero_De_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Numero_De_Cuenta__c</fullName>
    <label>Numero De Cuenta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>