force-app/main/default/objects/Sociedades__mdt/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>Pais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>