force-app/main/default/objects/Sociedades__mdt/fields/Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social__c</fullName>
    <label>Razon Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>