force-app/main/default/objects/Sociedades__mdt/fields/SWIFT_Code__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_Code__c</fullName>
    <label>SWIFT Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>