force-app/main/default/objects/Sociedades__mdt/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>