force-app/main/default/objects/Sociedades__mdt/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Telefono</label>
    <length>80</length>
    <type>Text</type>
</CustomField>